syntax = "proto3";

import "primes.proto";

package numbers;

option go_package = "github.com/kkviks/grpc-messaging/calculator/proto";

message SumRequest{
  repeated int32 values = 1;
}

message SumResponse{
  int32 result = 1;
}

service CalculatorService{
  rpc Sum(SumRequest) returns (SumResponse);
  rpc PrimeFactors(prime.PrimeRequest) returns (stream prime.PrimeResponse);
}
